--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,8 @@
 # Ignore all HTML files
 *.html
 
+# But don't ignore HTML files in html-iframes directory
+!html-iframes/*.html
+
 # Ignore the html-block-&inline-elements directory
 html-block-&inline-elements/
