Add solutions for CSS model questions 1-3

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,6 @@
 # But don't ignore .gitignore itself
 !.gitignore
 
-# Don't ignore the css-model folder
+# Don't ignore the css-model folder and its contents
 !css-model/
 !css-model/**
